manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: k8s-todos
spec:
  replicas: 1
  selector:
    matchLabels:
      app: todos
  template:
    metadata:
      labels:
        app: todos
    spec:
      volumes:
        - name: duck-image-file
          persistentVolumeClaim:
            claimName: duck-image-claim
      containers:
        - name: k8s-todos
          image: todos:003
          volumeMounts:
            - name: duck-image-file
              mountPath: /tmp/files
          resources: 
            limits:
              memory: 50Mi
              # cpu: should not be here
