manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: k8s-todos
spec:
  type: NodePort
  selector:
    app: todos
  ports:
    - name: http
      nodePort: 30080 # Value for nodePort can be between 30000-32767
      protocol: TCP
      port: 1234
      targetPort: 3000
